--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "meetups",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "repository": "https://github.com/IrinaNikolaeva0208/Meetups.git",
   "author": "Irina Nikolaeva <irina2002.nikolaeva@yandex.ru>",
   "license": "MIT",
   "scripts": {
-    "start": "",
+    "start": "node ./dist/app",
+    "build": "npx tsc",
     "lint": "eslint src/**/*.ts --fix"
   },
   "devDependencies": {
@@ -14,5 +16,11 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.9",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
