--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES6",                                  
-    "module": "ES6",                                     
-    "moduleResolution": "node", 
+    "module": "Node16",                                     
+    "moduleResolution": "Node16", 
     "outDir": "./dist",                 
     "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,          
