--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 PORT=3000;
-DB_PORT=3001;
 
-POSTGRES_PORT=5432;
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+
+DATABASE_URL=postgresql://postgres:password@localhost:5432/meetups?schema=publict
