--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,13 @@ services:
       - "${PORT}:${PORT}"
     depends_on:
       - postgres
-    volumes:
-      - type: bind
-        source: ./src
-        target: /app/src
   postgres:
     image: postgres:14-alpine
     restart: always
     networks:
       - app-network
     ports:
-      - "${DB_PORT}:${POSTGRES_PORT}"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     env_file:
       - .env
     volumes:
