--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
   "author": "Irina Nikolaeva <irina2002.nikolaeva@yandex.ru>",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/app",
+    "start": "npx ts-node src/app.ts",
     "build": "npx tsc",
     "lint": "eslint src/**/*.ts --fix"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
+    "prisma": "^5.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.9",
+    "@prisma/client": "^5.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
