--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "scripts": {
     "start": "npx ts-node src/app.ts",
+    "start:migrate": "prisma migrate deploy && yarn run start",
     "build": "npx tsc",
     "lint": "eslint src/**/*.ts --fix"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
@@ -23,6 +25,7 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.10.1"
   }
 }
