--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
-DATABASE_URL=postgresql://postgres:password@localhost:5432/meetups?schema=publict
+DATABASE_URL=postgresql://postgres:password@postgres:5432/meetups?schema=publict
