--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 
-DATABASE_URL=postgresql://postgres:password@postgres:5432/meetups?schema=publict
+DATABASE_URL=postgresql://postgres:password@postgres:5432/meetups?schema=public
+
+CRYPT_SALT=10
+JWT_SECRET_KEY=secret123123
