--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Irina Nikolaeva <irina2002.nikolaeva@yandex.ru>",
   "license": "MIT",
   "scripts": {
-    "start": "npx ts-node src/app.ts",
+    "start": "npx ts-node ./src/app.ts",
     "start:migrate": "prisma migrate deploy && yarn run start",
     "build": "npx tsc",
     "lint": "eslint src/**/*.ts --fix"
@@ -14,7 +14,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.9",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
@@ -24,8 +27,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.10.1"
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   }
 }
