--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist",                 
     "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,          
-    "strict": true,                                    
+    "noImplicitAny": false,
     "skipLibCheck": true                               
   }
 }
