protect routes using jwt strategy

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ DATABASE_URL=postgresql://postgres:password@postgres:5432/meetups?schema=public
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
+JWT_TOKEN_EXPIRES_IN=1h
