--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ DATABASE_URL=postgresql://postgres:password@postgres:5432/meetups?schema=public
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_TOKEN_EXPIRES_IN=1h
+REFRESH_SECRET_KEY=refresh123123
+REFRESH_TOKEN_EXPIRES_IN=24h
