--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
     "prisma": "^5.2.0",
+    "swagger-autogen": "^2.23.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
