--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.14",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
