--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
     "prisma": "^5.2.0",
+    "swagger-autogen": "^2.23.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.14",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
