--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
   "author": "Irina Nikolaeva <irina2002.nikolaeva@yandex.ru>",
   "license": "MIT",
   "scripts": {
+    "docker:start": "docker-compose up",
     "start": "yarn run build && node ./dist/app.js",
     "start:migrate": "prisma migrate deploy && yarn run start",
     "build": "npx tsc",
     "lint": "eslint src/**/*.ts --fix",
     "migrate:init": "npx prisma migrate dev --name init"
   },
+  "_moduleAliases" : {
+    "@authorization": "./dist/auth/middleware/functions",
+    "@schemas": "./dist/validation/schemas",
+    "@database": "./dist/utils/database",
+    "@responses": "./dist/utils/responses",
+    "@meetupInterfaces": "./dist/meetups/interfaces",
+    "@authInterfaces": "./dist/auth/interfaces",
+    "@authClasses": "./dist/auth/middleware/classes",
+    "@validators": "./dist/validation/middleware"
+  },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.9",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
@@ -38,6 +50,7 @@
     "express": "^4.18.2",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
