--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ PORT=3000;
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
-POSTGRES_PRISMA_URL="prisma_url"
-POSTGRES_URL_NON_POOLING="non_pooling_url"
+
+DATABASE_URL=postgresql://postgres:password@postgres:5432/meetups?schema=public
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
