--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@authInterfaces/*": ["./src/auth/interfaces/*"],
       "@authClasses/*": ["./src/auth/middleware/classes/*"],
       "@validators/*" : ["./src/validation/middleware/*"],
+      "@environment" : ["./src/utils/environment/variables"]
     }                            
   }
 }
