--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint src/**/*.ts --fix",
     "migrate:init": "npx prisma migrate dev --name init"
   },
-  "_moduleAliases" : {
+  "_moduleAliases": {
     "@authorization": "./dist/auth/middleware/functions",
     "@schemas": "./dist/validation/schemas",
     "@database": "./dist/utils/database",
@@ -22,7 +22,7 @@
     "@authInterfaces": "./dist/auth/interfaces",
     "@authClasses": "./dist/auth/middleware/classes",
     "@validators": "./dist/validation/middleware",
-    "@environment" : "./dist/utils/environment/variables"
+    "@environment": "./dist/utils/environment/variables"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -49,6 +49,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
