--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@authInterfaces": "./dist/auth/interfaces",
     "@authClasses": "./dist/auth/middleware/classes",
     "@validators": "./dist/validation/middleware",
-    "@environment": "./dist/utils/environment/variables"
+    "@environment": "./dist/utils/environment/variables",
+    "@logger" : "./dist/utils/logger/logger"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -55,6 +56,7 @@
     "module-alias": "^2.2.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "winston": "^3.10.0"
   }
 }
