divide auth router, controller, service and repository logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
     "noImplicitAny": false,
     "skipLibCheck": true,   
     "paths": {
-      "@authorization/*" : ["./src/auth/middleware/functions/*"],
+      "@authorization/*" : ["src/middleware/functions/*"],
       "@schemas/*" : ["./src/validation/schemas/*"],
       "@database/*" : ["./src/utils/database/*"],
       "@responses/*" : ["./src/utils/responses/*"],
       "@meetupInterfaces/*": ["./src/meetups/interfaces/*"],
       "@authInterfaces/*": ["./src/auth/interfaces/*"],
-      "@authClasses/*": ["./src/auth/middleware/classes/*"],
+      "@authClasses/*": ["src/middleware/classes/*"],
       "@validators/*" : ["./src/validation/middleware/*"],
       "@environment" : ["./src/utils/environment/variables"],
       "@logger" : ["./src/utils/logger/logger"]
