--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
     "migrate:init": "npx prisma migrate dev --name init"
   },
   "_moduleAliases": {
-    "@database": "./dist/utils/database",
-    "@responses": "./dist/utils/responses",
     "@meetupInterfaces": "./dist/meetups/interfaces",
     "@authInterfaces": "./dist/auth/interfaces",
-    "@validators": "./dist/validation/middleware",
-    "@environment": "./dist/utils/environment/variables",
-    "@logger": "./dist/utils/logger/logger"
+    "@utils" : "./dist/utils"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
