divide application into microservices

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-PORT=3000;
+GATEWAY_PORT=3000
+AUTH_PORT=3001
+MEETUPS_PORT=3002
+DB_PORT=3003
 
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
-POSTGRES_PRISMA_URL="prisma_url"
-POSTGRES_URL_NON_POOLING="non_pooling_url"
+DATABASE_URL="postgresql://postgres:password@postgres:5432/meetups?schema=public"
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
