--- a/src/auth/package.json
+++ b/src/auth/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "meetups-app",
+  "name": "@meetups-app/auth",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/IrinaNikolaeva0208/Meetups.git",
-  "author": "Irina Nikolaeva <irina2002.nikolaeva@yandex.ru>",
+  "main": "app.js",
   "license": "MIT",
-  "private": true,
   "scripts": {
-    "docker:start": "docker-compose up",
-    "start": "yarn workspaces run build && node ./dist/*/app.js",
-    "lint": "eslint src/**/*.ts --fix",
-    "migrate:init": "npx prisma migrate dev --name init"
-  },
-  "_moduleAliases": {
+    "build": "npx tsc && npx prisma generate",
+    "start": "yarn run build && node ./dist/app.js"
+  },"_moduleAliases": {
     "@utils": "./dist/utils"
   },
-  "workspaces": [
-    "./src/*"
-  ],
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
@@ -36,7 +27,6 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "http-proxy-middleware": "^2.0.6",
     "@prisma/client": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
