--- a/src/gateway/package.json
+++ b/src/gateway/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "meetups-app",
+  "name": "@meetups-app/gateway",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/IrinaNikolaeva0208/Meetups.git",
-  "author": "Irina Nikolaeva <irina2002.nikolaeva@yandex.ru>",
+  "main": "app.js",
   "license": "MIT",
-  "private": true,
   "scripts": {
-    "docker:start": "docker-compose up",
-    "start": "yarn workspaces run build && node ./dist/*/app.js",
-    "lint": "eslint src/**/*.ts --fix",
-    "migrate:init": "npx prisma migrate dev --name init"
-  },
-  "_moduleAliases": {
+    "build": "npx tsc && prisma generate && npx prisma migrate deploy",
+    "start": "yarn run build && node ./dist/app.js"
+  },"_moduleAliases": {
     "@utils": "./dist/utils"
   },
-  "workspaces": [
-    "./src/*"
-  ],
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
