--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ JWT_SECRET_KEY=secret123123
 JWT_TOKEN_EXPIRES_IN=1h
 REFRESH_SECRET_KEY=refresh123123
 REFRESH_TOKEN_EXPIRES_IN=24h
+
+RABBIT_PORT=5672
+WEB_RABBIT_PORT=15672
