--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "http-proxy-middleware": "^2.0.6",
     "@prisma/client": "^5.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
