--- a/src/auth/package.json
+++ b/src/auth/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc && npx prisma generate",
     "start": "yarn run build && node ./dist/app.js"
-  },"_moduleAliases": {
+  },
+  "_moduleAliases": {
     "@utils": "./dist/utils"
   },
   "devDependencies": {
@@ -15,6 +16,9 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.9",
+    "@types/amqplib": "^0.10.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.14",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
@@ -28,8 +32,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.14",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
