--- a/src/meetups/package.json
+++ b/src/meetups/package.json
@@ -6,18 +6,17 @@
   "scripts": {
     "build": "npx tsc && npx prisma generate",
     "start": "yarn run build && node ./dist/app.js"
-  },"_moduleAliases": {
+  },
+  "_moduleAliases": {
     "@utils": "./dist/utils"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.9",
-    "@types/passport": "^1.0.12",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.35",
+    "@types/amqplib": "^0.10.2",
+    "@types/cors": "^2.8.14",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
@@ -28,20 +27,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.14",
-    "bcrypt": "^5.1.1",
+    "amqplib": "^0.10.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "joi": "^17.10.1",
-    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "winston": "^3.10.0"
   }
 }
