--- a/src/meetups/package.json
+++ b/src/meetups/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.9",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
     "amqplib": "^0.10.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
