--- a/src/auth/package.json
+++ b/src/auth/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc && npx prisma generate && npx prisma db seed",
     "start": "yarn run build && node ./dist/app.js"
-  },"prisma": {
+  },
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "_moduleAliases": {
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@types/multer": "^1.4.8",
     "@types/passport-google-oauth20": "^2.0.12",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
@@ -45,6 +47,7 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
