--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,12 @@ REFRESH_TOKEN_EXPIRES_IN=24h
 RABBIT_PORT=5672
 WEB_RABBIT_PORT=15672
 
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
 ADMIN_LOGIN=admin123
 ADMIN_PASSWORD=qwerty123
+
+CLOUDINARY_NAME=your_cloudinary_name
+CLOUDINARY_KEY=your_cloudinary_key
+CLOUDINARY_SECRET=your_cloudinary_secret
