--- a/src/auth/package.json
+++ b/src/auth/package.json
@@ -39,6 +39,7 @@
     "@types/passport-google-oauth20": "^2.0.12",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -48,6 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
