--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@ GATEWAY_PORT=3000
 AUTH_PORT=3001
 MEETUPS_PORT=3002
 DB_PORT=3003
+RABBIT_PORT=5672
+WEB_RABBIT_PORT=15672
+ELASTIC_PORT=9200
+KIBANA_PORT=5601
 
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
@@ -14,9 +18,6 @@ JWT_TOKEN_EXPIRES_IN=1h
 REFRESH_SECRET_KEY=refresh123123
 REFRESH_TOKEN_EXPIRES_IN=24h
 
-RABBIT_PORT=5672
-WEB_RABBIT_PORT=15672
-
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 
@@ -26,3 +27,5 @@ ADMIN_PASSWORD=qwerty123
 CLOUDINARY_NAME=your_cloudinary_name
 CLOUDINARY_KEY=your_cloudinary_key
 CLOUDINARY_SECRET=your_cloudinary_secret
+
+ELASTIC_PASSWORD=pass123
