--- a/src/meetups/package.json
+++ b/src/meetups/package.json
@@ -11,13 +11,13 @@
     "@utils": "./dist/utils"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.4",
+    "@types/amqplib": "^0.10.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.9",
-    "@types/amqplib": "^0.10.2",
-    "@types/cors": "^2.8.14",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
@@ -27,9 +27,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.10.0",
     "@prisma/client": "^5.2.0",
-    "bcrypt": "^5.1.1",
     "amqplib": "^0.10.3",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
