--- a/src/meetups/package.json
+++ b/src/meetups/package.json
@@ -38,6 +38,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.10.1",
     "module-alias": "^2.2.3",
+    "pdf-lib": "^1.17.1",
     "winston": "^3.10.0"
   }
 }
