--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ RABBIT_PORT=5672
 WEB_RABBIT_PORT=15672
 ELASTIC_PORT=9200
 KIBANA_PORT=5601
+REDIS_PORT=6379
 
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
